# opensearch-rust-sdk

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  EXTENSIONS.md  README.md  build.rs
.github/workflows/: rust-ci.yml
docs/features/: 01-core-extension-framework.md  02-transport-protocol.md  03-rest-api-framework.md  04-settings-management.md  05-action-system.md  06-search-extensions.md  07-analysis-extensions.md  08-script-extensions.md  09-ingest-extensions.md  10-mapper-extensions.md  11-discovery-clustering.md  12-security-integration.md  13-client-libraries.md  14-testing-framework.md  15-migration-tools.md  README.md
docs/justfile/: README.md
examples/: hello_extension.rs
resources/compose/: docker-compose-dev.yml  docker-compose-extensions.yml  docker-compose-host-extension.yml  docker-compose-host-extensions.yml  docker-compose-opensearch-extensions.yml  docker-compose-opensearch-host-network.yml  docker-compose-prod.yml
resources/dockerfile/: Dockerfile.extension
scripts/: justfile  test.sh
src/: interface.rs  lib.rs  main.rs  transport.rs
src/extension/: builder.rs  context.rs  dependency.rs  discovery.rs  error.rs  health.rs  lifecycle.rs  metadata.rs  mod.rs  registration.rs  resilience.rs  runner.rs  traits.rs
src/transport/: client.rs
